@@ -2,6 +2,7 @@ package com.localllama.plugin.util;
 
 import com.localllama.plugin.service.LocalLlamaClient;
 import com.localllama.plugin.ui.ChatMessage;
+import java.util.Collections;
 import java.util.List;
 import java.util.function.Consumer;
 import org.eclipse.swt.widgets.Display;
@@ -10,7 +11,7 @@ public class LocalLlamaQueryUtil {
 
     public static void asyncQuery(String prompt, String model, Consumer<String> callback) {
         StringBuffer responseBuilder = new StringBuffer();
-        List<ChatMessage> messages = List.of(new ChatMessage(ChatMessage.Sender.USER, prompt));
+        List<ChatMessage> messages = Collections.singletonList(new ChatMessage(prompt, ChatMessage.SenderType.USER));
 
         Runnable doneCallback = () -> {
             Display.getDefault().asyncExec(() -> {
